docs(adr): ADR-080 AuraDB three-horizon strategy & GDS deferral (#769)
* chore(neo4j): mark self-host-only knobs AURA-TEMPORARY

The heap/page-cache sizing, JVM Vector API (SIMD) flag, and monthly
version pin exist only because SKUEL self-hosts Neo4j — AuraDB provides
each by default (memory by instance tier, Vector API on by default,
managed auto-upgrades). Mark them with a grep-able `# AURA-TEMPORARY:`
comment across the infra/app compose + k8s manifest so they read as
temporary scaffolding, not investment, ahead of the committed AuraDB
migration.

Portable knobs (per-query TimedDriver timeout, schema monitoring, APOC
scoping) are deliberately left unmarked — they apply driver/app-side and
carry over to AuraDB unchanged.

Docs: AURADB_MIGRATION_GUIDE.md § 6.2 upgraded into the canonical "knobs
that disappear on Aura" checklist (table + `grep -rn AURA-TEMPORARY`
recipe); NEO4J_SERVER_TUNING.md carries the same self-host-only lens.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

* docs(adr): ADR-080 AuraDB three-horizon strategy & GDS deferral

Ratify the shape before the builds (H1 instrument, H0 readiness) implement
it: three horizons on one graph — H0 AuraDB Free readiness, H1 author the
knowledge graph edge-first + a structural-health gauge, H2 defer Neo4j
Graph Data Science behind a discipline until content density justifies it.

Records: GDS = Digital-layer enhancer (ADR-043); AuraDB Free ≠ AuraDS (GDS
is a separate paid tier); each willingly-absent capability has an Analog
fallback; the discipline (don't hand-roll graph algorithms — mark
GDS-FUTURE / register PLANNED_METHODS; don't build a speculative port now);
and the density-triggered H2 activation. Grounded in live-graph
measurement (edge density, not node count, is the gap).

Also add the ADR-080 row to docs/INDEX.md.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 4.8 (1M context) <noreply@anthropic.com>